--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,8 +51,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=22
-javac.target=22
+javac.source=23
+javac.target=23
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -99,7 +99,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Oracle_OpenJDK_22.0.2_9
+platform.active=JDK_23
 project.license=mit
 run.classpath=\
     ${javac.classpath}:\
